Add metadata file

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
+env/
+
 .DS_Store
-
 __pycache__/
-
-data/*/
-
-exps/*/results/
+.vscode/*
+*.swp
 
 plots/*
-
+data/*/time_order_filenames.pickle
+exps/*/results/
 ports/cpp/build/*
-
-.vscode/*
-
-*.swp
