Clean up and add more call graph data

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@ __pycache__/
 .vscode/*
 *.swp
 
+tmp/*
 plots/*
 data/*/time_order_filenames.pickle
+data/alibaba_microservices/*/
 exps/*/results/
 ports/cpp/build/*
